--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,23 @@ button {
 button:hover {
   background-color: #c62828;
 }
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.5em;
+}
+
+.form-content input {
+  margin: 0;
+  padding: 6px;
+  border: 2px solid #000;
+  width: 100%;
+}
+
+.form-content input::placeholder {
+  font-family: 'Courier New', Courier, monospace;
+  color: #000;
+  font-weight: 700;
+}
