--- a/src/index.css
+++ b/src/index.css
@@ -88,10 +88,18 @@ button {
   border: none;
   cursor: pointer;
   box-shadow: 3px 4px 0 rgb(0 0 0);
+  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
 }
 
 button:hover {
   background-color: #c62828;
+  transform: scale(1.05);
+  box-shadow: 5px 6px 0 rgb(0 0 0);
+}
+
+button:active {
+  transform: scale(0.95);
+  box-shadow: 1px 2px 0 rgb(0 0 0);
 }
 
 .form-content {
